--- a/src/index.css
+++ b/src/index.css
@@ -220,3 +220,26 @@
       -2.6em 0em 0 0em rgba(255, 255, 255, 0.7), -1.8em -1.8em 0 0em #ffffff;
   }
 }
+
+@media only screen and (max-width: 1000px) {
+  #about {
+  margin: 0 auto;
+  font-size: 60px;
+ }
+
+#projects {
+  margin: 0 auto;
+  font-size: 60px;
+}
+
+#contact {
+  margin: 0 auto;
+  font-size: 60px;
+  letter-spacing: -2px;
+}
+
+.bg-flashWhite {
+  background-color: grey;
+}
+
+}
